# Strukturinis-programavimas

./: CMakeLists.txt
Paskaitų praktika/2 Paskaitos praktinės užduotys/: Užduotis_1.cpp  Užduotis_2.cpp  Užduotis_3.cpp  Užduotis_4.cpp  Užduotis_5.cpp  Užduotis_6.cpp
Paskaitų praktika/3 Paskaitos praktinės užduotys/: Užduotis_1.cpp  Užduotis_2.cpp  Užduotis_3.cpp  Užduotis_4.cpp  Užduotis_5.cpp  Užduotis_6.cpp  Užduotis_7.cpp
Paskaitų praktika/4 Paskaitos praktinės užduotys/: Užduotis_1.cpp  Užduotis_2.cpp
Praktiniai atsiskaitymai/: 1_Praktinis_Atsiskaitymas.cpp
