cmake_minimum_required(VERSION 4.1)
project(Struktrinis_programavimas)

set(CMAKE_CXX_STANDARD 20)

add_executable(Struktrinis_programavimas main.cpp
        "Paskaitų praktika/2 Paskaitos praktinės užduotys/Užduotis_1.cpp"
        "Paskaitų praktika/2 Paskaitos praktinės užduotys/Užduotis_2.cpp"
        "Paskaitų praktika/2 Paskaitos praktinės užduotys/Užduotis_3.cpp"
        "Paskaitų praktika/2 Paskaitos praktinės užduotys/Užduotis_4.cpp"
        "Paskaitų praktika/2 Paskaitos praktinės užduotys/Užduotis_5.cpp"
        "Paskaitų praktika/2 Paskaitos praktinės užduotys/Užduotis_6.cpp"
        "Paskaitų praktika/3 Paskaitos praktinės užduotys/Užduotis_1.cpp"
        "Paskaitų praktika/3 Paskaitos praktinės užduotys/Užduotis_2.cpp"
        "Paskaitų praktika/3 Paskaitos praktinės užduotys/Užduotis_3.cpp"
        "Paskaitų praktika/3 Paskaitos praktinės užduotys/Užduotis_4.cpp"
        "Paskaitų praktika/3 Paskaitos praktinės užduotys/Užduotis_5.cpp"
        "Paskaitų praktika/3 Paskaitos praktinės užduotys/Užduotis_6.cpp"
        "Paskaitų praktika/3 Paskaitos praktinės užduotys/Užduotis_7.cpp"
        "Paskaitų praktika/4 Paskaitos praktinės užduotys/Užduotis_1.cpp"
        "Paskaitų praktika/4 Paskaitos praktinės užduotys/Užduotis_2.cpp"
        "Praktiniai atsiskaitymai/1_Praktinis_Atsiskaitymas.cpp"
)
